ažuriran ZAPP file.

--- a/zapp.yaml
+++ b/zapp.yaml
@@ -14,3 +14,4 @@ propertyGroups:
         type: local
         locations:
           - Z26069.**
+          - C:\Users\agibas\COBOL\obrada01\copylib
